# Comparison

./: Anime.sql
express-typeorm/: .gitignore  .prettierrc  package.json  pnpm-lock.yaml
express-typeorm/src/: datasource.ts  index.ts
express-typeorm/src/entity/: anime.ts
express-typeorm/src/routes/: anime.ts
rust-actix-sqlx/: .gitignore  Cargo.toml
rust-actix-sqlx/migrations/: 20230722023544_animes.down.sql  20230722023544_animes.up.sql
rust-actix-sqlx/src/: animes.rs  main.rs  routes.rs
spring-java/: build.gradle.kts  settings.gradle.kts
spring-java/src/main/java/com/vandejr/springjava/: SpringJavaApplication.java
spring-java/src/main/java/com/vandejr/springjava/controllers/: AnimesController.java
spring-java/src/main/java/com/vandejr/springjava/entities/: Anime.java
spring-java/src/main/java/com/vandejr/springjava/repositories/: AnimesRepository.java
spring-java/src/main/resources/: application.properties
spring-java/src/test/java/com/vandejr/springjava/: SpringJavaApplicationTests.java
