[package]
name = "rust-actix-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.174", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros", "uuid", "chrono"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
